<resources>
    <string name="app_name">FinderPet2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FinderPet</string>
    <string name="nav_header_subtitle">finderpetapp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="found">Encontrados</string>
    <string name="drink">Perdidos</string>
    <string name="profile">Perfil</string>
    <string name="configurations">Configuraciones</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="about">Acerca de</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Comidas">Comidas</string>
    <string name="bebidas">Bebidas</string>
    <string name="title_activity_navigation_drawer">activity_navigation_drawer</string>
    <string name="nombre">Nombre</string>
    <string name="manana">Mañana</string>
    <string name="tarde">Tarde</string>
    <string name="precio">Precio</string>
    <string name="noche">Noche</string>
    <string name="entrada">Entrada</string>
    <string name="plato_fuerte">Plato Fuerte</string>
    <string name="ingrese_los_ingredientes">Ingrese los ingredientes</string>
    <string name="ingreComidas">Ingredientes:</string>
    <string name="ingreBebidas">Ingredientes:</string>
    <string name="maniana">Mañana</string>
    <string name="tipo_comida">Tipo Comida:</string>
    <string name="horario">Horario:</string>
    <string name="precio_comida">Precio $</string>
    <string name="precio_bebida">Precio $</string>
    <string name="tiempo_preparacion">Tiempo Preparación</string>
    <string name="nombre_bebida">Nombre</string>
    <string name="informacion_ingresada">Información Ingresada</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="registrar">Registrar</string>
    <string name="limpiar">Limpiar</string>
    <string name="exit">Salir</string>
    <string name="title_activity_comidas2">activity_comidas2</string>
    <string name="maxipollo">Maxipollo</string>
    <string name="infoMaxipollo">Maxi Pollo es una empresa cien por ciento colombiana que se preocupa por innovar y ofrecer a los clientes variedad de alternativas de alimentación manteniendo siempre las premisas de servicio y calidad.</string>
    <string name="computacion_movil">Computación Móvil</string>
    <string name="infoCurso">Este curso está orientado a adquirir conocimientos en el desarrollo de aplicaciones para dispositivos móviles. Conocer las particularidades de los dispositivos móviles en su arquitectura de hardware y los sistemas operativos. Conocer conceptos básicos de programación de dispositivos móviles. Adquirir la capacidad de realizar proyectos de computación móvil.</string>
    <string name="register">Registrarse</string>
    <string name="login_user">Iniciar Sesión con usuario y contraseña</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="load_image">Seleccionar Imagen</string>
    <string name="description">Descripción</string>
    <string name="menu">Menú</string>
    <string name="agregar">Agregar</string>
    <string name="detail_pet">Detalle de la Mascota</string>
    <string name="name_pet">Nombre:</string>
    <string name="detalle_bebida">Detalle Bebida</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="time">Tiempo de preparación</string>
    <string name="hint_search">search</string>
    <string name="searchFood">Buscar Comidas</string>
    <string name="searchDrinks">Buscar Bebidas</string>
    <string name="update">Actualizar Database</string>

    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="revoke">Eliminar Cuenta</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>
    <string name="login_google">Iniciar Sesión con Google</string>
    <string name="login">Ingresar</string>
    <string name="next_main">Continuar</string>
    <string name="welcome">Bienvenido</string>

    <string-array name="updateTime">
        <item>60 Seg</item>
        <item>10 Seg</item>
        <item>30 Seg</item>
        <item>300 Seg</item>
    </string-array>

    <string-array name="especie">
        <item></item>
        <item>Perro</item>
        <item>Gato</item>
        <item>Otro</item>
    </string-array>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="register_email">REGISTRARSE</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="ubicacion">Ubicación</string>
    <string name="especie">Especie</string>
    <string name="raza">Raza</string>
    <string name="nombre_contacto">Nombre de Contacto</string>
    <string name="telefono_contacto">Teléfono de Contacto</string>
    <string name="observaciones">Observaciones</string>
    <string name="title_activity_maps">Map</string>
</resources>
