<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@mipmap/ic_menu_home"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_plates"
            android:icon="@mipmap/ic_menu_found"
            android:title="@string/found" />
        <item
            android:id="@+id/nav_drink"
            android:icon="@mipmap/ic_menu_lost"
            android:title="@string/drink" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_menu_perfil"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_searchFood"
            android:icon="@mipmap/ic_menu_adopta"
            android:title="@string/searchFood" />
        <item
            android:id="@+id/nav_configurations"
            android:icon="@mipmap/ic_menu_configuration"
            android:title="@string/configurations" />
        <item
            android:id="@+id/nav_searchDrink"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/searchDrinks" />
        <item
            android:id="@+id/nav_closeSession"
            android:icon="@mipmap/ic_menu_closesession"
            android:title="@string/close_session" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_menu_about"
            android:title="@string/about" />


    </group>



</menu>
