<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ComidasFragment">

    <Button
        android:id="@+id/id_register_plate"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        style="@android:style/Widget.Button"
        android:backgroundTint="@color/colorPrimary"
        android:text="Agregar"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoDescripcion_id"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imagenComida_id"
        android:layout_width="159dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:paddingRight="5dp"
        android:src="@drawable/sin_imagen"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp" />




    <android.support.design.widget.TextInputEditText
        android:id="@+id/id_name_plate"
        android:layout_width="448dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:drawableRight="@drawable/ic_menu_send"
        android:ems="10"
        android:hint="@string/ubicacion"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenComida_id" />

    <Spinner
        android:id="@+id/id_price_plate"
        android:layout_width="218dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:entries="@array/especie"
        android:hint="@string/especie"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_name_plate" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/id_price_plate2"
        android:layout_width="218dp"
        android:layout_height="52dp"
        android:layout_marginStart="232dp"
        android:layout_marginLeft="232dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/raza"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_name_plate" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/timePreparacion_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/telefono_contacto"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePreparacion_id2" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/timePreparacion_id2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/nombre_contacto"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_price_plate" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/textoDescripcion_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/observaciones"
        android:inputType="textMultiLine|textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePreparacion_id" />

    <Button
        android:id="@+id/btnImgFood"
        android:layout_width="119dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Cargar imagen"
        app:layout_constraintBottom_toTopOf="@+id/id_name_plate"
        app:layout_constraintStart_toEndOf="@+id/imagenComida_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <Button
        android:id="@+id/btnImgFood2"
        android:layout_width="119dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Ver Mapa"
        app:layout_constraintBottom_toTopOf="@+id/id_name_plate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnImgFood"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

</android.support.constraint.ConstraintLayout>