<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BebidasFragment">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imagenBebida_id"
        android:layout_width="179dp"
        android:layout_height="131dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/no_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nomBebida_id"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/nombre_bebida"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toTopOf="@+id/descripBebidas_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenBebida_id" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/precioBebida_id"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:hint="@string/precio_bebida"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/id_btnAddDrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripBebidas_id" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/descripBebidas_id"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine|textNoSuggestions"
        app:layout_constraintBottom_toTopOf="@+id/precioBebida_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomBebida_id" />

    <Button
        android:id="@+id/id_btnAddDrink"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/agregar"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precioBebida_id"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Registrar una Bebida" />

    <Button
        android:id="@+id/btnImgDrink"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="Cargar imagen"
        app:layout_constraintBottom_toTopOf="@+id/nomBebida_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imagenBebida_id"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />


</android.support.constraint.ConstraintLayout>